unpackaged/main/default/objects/n2de__cls_Match_object__c/n2de__cls_Match_object__c.object-meta.xml
<CustomObject>
    <label>Classifier matching object</label>
    <nameField>
        <label>sObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classifier matching objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>