unpackaged/main/default/objects/n2de__cls_Match_object__c/fields/n2de__Match_filter_soql__c.field-meta.xml
<CustomField>
    <fullName>n2de__Match_filter_soql__c</fullName>
    <description>The SOQL filter to use to limit the records returned from matching</description>
    <label>Match filter SOQL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>