unpackaged/main/default/objects/n2de__cls_Match_object__c/fields/n2de__Match_filter_ui_config__c.field-meta.xml
<CustomField>
    <fullName>n2de__Match_filter_ui_config__c</fullName>
    <description>The UI config for the filter to use to limit the records returned from matching</description>
    <label>Match filter ui config</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>