unpackaged/main/default/objects/n2de__cls_Match_object__c/fields/n2de__Match_multiple_order__c.field-meta.xml
<CustomField>
    <fullName>n2de__Match_multiple_order__c</fullName>
    <description>How to sort when there are multiple record matches</description>
    <label>Record sort multiple matches</label>
    <length>255</length>
    <type>Text</type>
</CustomField>